--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 # DataBase connection (Postgresql)
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+POSTGRES_DB=<DATABASES_NAME>
+POSTGRES_USER=<DATABASES_USER>
+POSTGRES_PASSWORD=<DATABASES_PASSWORD>
 
 #Telegram connection
-TELEGRAM_TOKEN=
+TELEGRAM_TOKEN=<TELEGRAM_TOKEN>
